change position of git flag to fix nav visibility at phone rez

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,6 +67,7 @@ $small-space: 5px;
 /* button styles */
 .titlebar {
   padding: $large-space;
+  padding-left: 50px;
   margin-bottom: $large-space;
   @include blue_gradient;
   @include text_shadow;
@@ -76,7 +77,7 @@ $small-space: 5px;
     img {
       position: relative;
       top: $large-space;
-      right: $large-space;
+      right: 50px;
     }
   }
   h1 {
@@ -249,7 +250,7 @@ footer {
 }
 
 #github {
-  position: absolute; top: 0; left: 0; border: 0;
+  position: absolute; top: 40px; left: 0; border: 0;
   z-index: 3;
 }
 
